# datagsm-sdk-openapi-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CD.yml  CI.yml
src/datagsm_openapi/: __init__.py  _http.py  _json.py  client.py  exceptions.py  py.typed
src/datagsm_openapi/api/: __init__.py  _base.py  club.py  neis.py  project.py  student.py
src/datagsm_openapi/models/: __init__.py  _common.py  club.py  enums.py  neis.py  project.py  student.py
