[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagsm-openapi-sdk"
version = "1.0.0b1"
description = "Python SDK for DataGSM OpenAPI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "themoment-team", email = "datagsm.oauth@gmail.com"}
]
keywords = ["datagsm", "openapi", "sdk", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/themoment-team/datagsm-openapi-sdk-python"
Documentation = "https://docs.themoment.io/datagsm/openapi/sdk/python"
Repository = "https://github.com/themoment-team/datagsm-openapi-sdk-python"
Issues = "https://github.com/themoment-team/datagsm-openapi-sdk-python/issues"
"API Documentation" = "https://openapi.data.hellogsm.kr"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datagsm_openapi = ["py.typed"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN401", # Dynamically typed expressions (Any) - needed for *args in context managers
    "N818",   # Exception naming - DataGsmException is the intended name
    "UP035",  # typing.Type vs type - Python 3.9 compatibility
    "UP006",  # Type[T] vs type[T] - Python 3.9 compatibility
    "N812",   # Lowercase imported as non-lowercase - intentional (date as Date)
    "DTZ011", # date.today() without timezone - acceptable for our use case
]

[tool.ruff.lint.isort]
known-first-party = ["datagsm_openapi"]
